k8s/smack/predicter.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: predicter

spec:
  # serviceName: predicter-svc
  replicas: 1
  selector:
    matchLabels:
      app: predicter

  template:
    metadata:
      labels:
        app: predicter

    spec:
      containers:
      - name: spark-py
        image: d1scak3/predicter:1.0
