k8s/smack/bitnami-worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spark-worker

spec:
  serviceName: spark-worker
  replicas: 3
  selector:
    matchLabels:
      app: spark-worker

  template:
    metadata:
      labels:
        app: spark-worker

    spec:
      containers:
      - name: spark-py
        image: bitnami/spark:3.3
        ports:
        - containerPort: 4040
        - containerPort: 7077
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: spark-worker

spec:
  # type: LoadBalancer

  selector:
    app: spark-worker
  
  clusterIP: None
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
    - name: app
      port: 4040
      targetPort: 4040
