k8s/smack/bitnami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
  rules:
    - host: zenprice.spark
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-driver
                port:
                  number: 8080

          # - path: /cassandra
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: cassandra
          #       port:
          #         number: 9042
