k8s/smack/cassandra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassandra-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
  rules:
    - host: zenprice.cassandra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cassandra
                port:
                  number: 9042
